bk_ida/gobmkida/c1/owl_mark_boundary
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_mark_boundary/src/engine/owl.c:3866:27: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v6 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v5); 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_mark_boundary/src/obj/1/owl.o] Error 1
